metadata/force-app/main/default/objects/Opportunity/fields/Account_Subsidiary__c.field-meta.xml
<CustomField>
    <fullName>Account_Subsidiary__c</fullName>
    <description>Used for Salesforce - Jira integration (Legal tickets)</description>
    <formula>Account.Subsidiary_lookup__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Subsidiary</label>
    <type>Text</type>
</CustomField>