metadata/force-app/main/default/objects/Opportunity/fields/Active_User_Sales_Qual__c.field-meta.xml
<CustomField>
    <fullName>Active_User_Sales_Qual__c</fullName>
    <formula>IF(Sales_Qualifier_New__c = $User.Id , 1 , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active User Sales Qual?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>