metadata/force-app/main/default/objects/Opportunity/fields/Active_User_Solutions_Owner__c.field-meta.xml
<CustomField>
    <fullName>Active_User_Solutions_Owner__c</fullName>
    <formula>IF( Solution_Owner__c = $User.Id , 1 , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active User Solutions Owner?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>