metadata/force-app/main/default/objects/Opportunity/fields/ACV_ARR__c.field-meta.xml
<CustomField>
    <fullName>ACV_ARR__c</fullName>
    <description>BODEV-4163 Calculates the Average Contract Value with the Length Ratio (Only New Business &amp; Upsells) and ARR</description>
    <formula>Contract_Length_Ratio__c  *  ARR_manual__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ACV ARR</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>