metadata/force-app/main/default/objects/Opportunity/fields/Additional_Modules_Spotdraft__c.field-meta.xml
<CustomField>
    <fullName>Additional_Modules_Spotdraft__c</fullName>
    <description>Created this field to provide control to the users to display/hide sections - SpotDraft</description>
    <inlineHelpText>Only include the discussed pricing</inlineHelpText>
    <label>SpotDraft Additional Pricing Tables</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Additional Users with Adobe CC Connector license</fullName>
            </value>
            <value>
                <fullName>Additional Users without Adobe CC Connector license</fullName>
            </value>
            <value>
                <fullName>Additional Storage &amp; Traffic Pricing</fullName>
            </value>
            <value>
                <fullName>Asset Workflow</fullName>
            </value>
            <value>
                <fullName>Brand Guidelines Basic</fullName>
            </value>
            <value>
                <fullName>Brand Guidelines Advanced</fullName>
            </value>
            <value>
                <fullName>Brand Guidelines Enterprise</fullName>
            </value>
            <value>
                <fullName>Content Workflow Basic</fullName>
            </value>
            <value>
                <fullName>Content Workflow Advanced</fullName>
            </value>
            <value>
                <fullName>Print Brand Templates</fullName>
            </value>
            <value>
                <fullName>Studio Basic</fullName>
            </value>
            <value>
                <fullName>Studio Advanced</fullName>
            </value>
            <value>
                <fullName>Analytics Standard</fullName>
            </value>
            <value>
                <fullName>Analytics Advanced</fullName>
            </value>
            <value>
                <fullName>Analytics for BI</fullName>
            </value>
            <value>
                <fullName>Dynamic Asset Transformation Base (&lt;1M)</fullName>
            </value>
            <value>
                <fullName>Dynamic Asset Transformation Premium (1M-100M)</fullName>
            </value>
            <value>
                <fullName>Dynamic Asset Transformation Elite (100M+)</fullName>
            </value>
            <value>
                <fullName>Open Asset Bank</fullName>
            </value>
            <value>
                <fullName>Content Workflow Custom</fullName>
                <isActive>false</isActive>
                <label>Content Workflow Custom</label>
            </value>
            <value>
                <fullName>Studio Custom</fullName>
                <isActive>false</isActive>
                <label>Studio Custom</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>