metadata/force-app/main/default/objects/Opportunity/fields/Allow_End_Date_Update__c.field-meta.xml
<CustomField>
    <fullName>Allow_End_Date_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allows a process to automatically update end date of an upsell.</description>
    <label>Allow End Date Update?</label>
    <type>Checkbox</type>
</CustomField>