metadata/force-app/main/default/objects/Opportunity/fields/Allow_Product_Merge__c.field-meta.xml
<CustomField>
    <fullName>Allow_Product_Merge__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by &apos;Upsell to Renewal&apos; flow and Prevent_delete_OLI_on_Renewals_ClosedWon validation rule.</description>
    <label>Allow Product Merge</label>
    <type>Checkbox</type>
</CustomField>