metadata/force-app/main/default/objects/Opportunity/fields/Allow_Removing_Package_Products__c.field-meta.xml
<CustomField>
    <fullName>Allow_Removing_Package_Products__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The field that is used in the validation rule and flow that removes packages from NB opportunities. Gives an exception to the validation rule.</description>
    <label>Allow Removing Package Products</label>
    <type>Checkbox</type>
</CustomField>