metadata/force-app/main/default/objects/Opportunity/fields/Amendment_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Amendment Opportunity</label>
    <type>Checkbox</type>
</CustomField>