metadata/force-app/main/default/objects/Opportunity/fields/Applied_Cumulative_Indexation__c.field-meta.xml
<CustomField>
    <fullName>Applied_Cumulative_Indexation__c</fullName>
    <description>Used to store the cumulative indexation % applied to renewal</description>
    <inlineHelpText>Cumulative indexation rate applied to products(Sales Price &amp; Default Price) and opportunity ARR.</inlineHelpText>
    <label>Applied Cumulative Indexation %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>