metadata/force-app/main/default/objects/Opportunity/fields/Applied_Upcoming_Indexation__c.field-meta.xml
<CustomField>
    <fullName>Applied_Upcoming_Indexation__c</fullName>
    <description>Used to store the upcoming indexation % for the first year of the renewal</description>
    <inlineHelpText>Renewal Year 1 indexation rate applied to products (Sales Price &amp; Default Price) and Opportunity ARR.</inlineHelpText>
    <label>Applied Upcoming Indexation %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>