metadata/force-app/main/default/objects/Opportunity/fields/Archival_Storage_GB__c.field-meta.xml
<CustomField>
    <fullName>Archival_Storage_GB__c</fullName>
    <label>Archival Storage (GB)</label>
    <summarizedField>OpportunityLineItem.of_Archival_Storage_Mapped__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>