metadata/force-app/main/default/objects/Opportunity/fields/ARR__c.field-meta.xml
<CustomField>
    <fullName>ARR__c</fullName>
    <description>Annual Recurring Revenue</description>
    <formula>IF(AND(
ISPICKVAL(StageName,&quot;Closed Won&quot;),
HasOpportunityLineItem = TRUE), MRR_from_Products__c * 12, MRR__c *12)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Annual Recurring Revenue</inlineHelpText>
    <label>ARR from products</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>