metadata/force-app/main/default/objects/Opportunity/fields/ARR_for_Bizible__c.field-meta.xml
<CustomField>
    <fullName>ARR_for_Bizible__c</fullName>
    <description>BODEV-4084 Integration User Marketing Access to Opportunity data &amp; ARR_for_Bizible__c Data
Created this field to track ARR in EUR currency for Bizible reporting</description>
    <label>ARR for Bizible (EUR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>