metadata/force-app/main/default/objects/Opportunity/fields/ARR_manual__c.field-meta.xml
<CustomField>
    <fullName>ARR_manual__c</fullName>
    <description>Indicates the ARR of the opportunity; can be filled in by the end users.</description>
    <label>ARR</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>