metadata/force-app/main/default/objects/Opportunity/fields/ARR_Reports__c.field-meta.xml
<CustomField>
    <fullName>ARR_Reports__c</fullName>
    <description>Used in &apos;Contracted ARR&apos; roll up summary field on account.</description>
    <formula>ARR_manual__c</formula>
    <label>ARR Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>