metadata/force-app/main/default/objects/Opportunity/fields/Auto_Created__c.field-meta.xml
<CustomField>
    <fullName>Auto_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Upsells that have been created through customer portals.</description>
    <inlineHelpText>Upsells that have been created through customer portals.</inlineHelpText>
    <label>Auto Created</label>
    <type>Checkbox</type>
</CustomField>