metadata/force-app/main/default/objects/Opportunity/fields/AWS_Marketplace_Agreement__c.field-meta.xml
<CustomField>
    <fullName>AWS_Marketplace_Agreement__c</fullName>
    <description>BODEV-4006
Requested by the partnerships team to support Bynder’s partnership with AWS</description>
    <label>AWS Marketplace Agreement</label>
    <type>Url</type>
</CustomField>