metadata/force-app/main/default/objects/Opportunity/fields/AWS_Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>AWS_Opportunity_ID__c</fullName>
    <description>BODEV-4006
Requested by the partnerships team to support Bynder’s partnership with AWS</description>
    <label>AWS Opportunity ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>