metadata/force-app/main/default/objects/Opportunity/fields/BDR_Reactivated__c.field-meta.xml
<CustomField>
    <fullName>BDR_Reactivated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Autofilled from Lead/Contact</description>
    <inlineHelpText>Check this box if Outbound Prospecting occurred less than 3 months ago and the Opportunity source is not Outbound Sales.</inlineHelpText>
    <label>BDR Outbound Influenced</label>
    <type>Checkbox</type>
</CustomField>