metadata/force-app/main/default/objects/Opportunity/fields/Billing_Onboarding_Form_Sent_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Billing_Onboarding_Form_Sent_Timestamp__c</fullName>
    <description>BODEV-1487: Timestamp when Customer Billing Onboarding Form was sent. Populated by Opportunity [ALF] Invoked: Send Customer Onboarding Form</description>
    <label>Billing Onboarding Form Sent Timestamp</label>
    <type>DateTime</type>
</CustomField>