metadata/force-app/main/default/objects/Opportunity/fields/bizible2__Bizible_Opportunity_Amount__c.field-meta.xml
<CustomField>
    <fullName>bizible2__Bizible_Opportunity_Amount__c</fullName>
    <description>Only to be used if a number other than Amount should be used to calculate attribution</description>
    <inlineHelpText>Only to be used if a number other than Amount should be used to calculate attribution</inlineHelpText>
    <label>Bizible Opportunity Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>