metadata/force-app/main/default/objects/Opportunity/fields/Bynder_pitch__c.field-meta.xml
<CustomField>
    <fullName>Bynder_pitch__c</fullName>
    <description>Field to add whether the Bynder platform was pitched to Webdam customer, either yes/no.</description>
    <inlineHelpText>Field to add whether the Bynder platform was pitched to Webdam customer, either yes/no.</inlineHelpText>
    <label>Bynder Pitch</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>