metadata/force-app/main/default/objects/Opportunity/fields/Bynder_Pitch_Detailed__c.field-meta.xml
<CustomField>
    <fullName>Bynder_Pitch_Detailed__c</fullName>
    <description>Add details if necessary regarding the pitching of Bynder.</description>
    <inlineHelpText>Add details if necessary regarding the pitching of Bynder.</inlineHelpText>
    <label>Bynder Pitch - Detailed</label>
    <type>TextArea</type>
</CustomField>