metadata/force-app/main/default/objects/Opportunity/fields/Bynder_Pitch_Progress__c.field-meta.xml
<CustomField>
    <fullName>Bynder_Pitch_Progress__c</fullName>
    <description>Reason why Bynder Pitch didn&apos;t succeed.</description>
    <label>Bynder Pitch - Progress</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bankruptcy</fullName>
            </value>
            <value>
                <fullName>Committed to Competitor</fullName>
            </value>
            <value>
                <fullName>Homegrown Tool</fullName>
            </value>
            <value>
                <fullName>Lack of Features</fullName>
            </value>
            <value>
                <fullName>Merger</fullName>
            </value>
            <value>
                <fullName>Webdam/Bynder Feature Parity</fullName>
            </value>
            <value>
                <fullName>Negative Customer Experience</fullName>
            </value>
            <value>
                <fullName>No Response</fullName>
            </value>
            <value>
                <fullName>Not interested</fullName>
            </value>
            <value>
                <fullName>Pitched too late</fullName>
            </value>
            <value>
                <fullName>Price too High</fullName>
            </value>
            <value>
                <fullName>Price too Low</fullName>
            </value>
            <value>
                <fullName>Refused Demo</fullName>
            </value>
            <value>
                <fullName>Remain on Webdam Platform</fullName>
            </value>
            <value>
                <fullName>Other Loss Reason</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>