metadata/force-app/main/default/objects/Opportunity/fields/Bynder_Pitch_Reason_for_Lack_of_Fit__c.field-meta.xml
<CustomField>
    <fullName>Bynder_Pitch_Reason_for_Lack_of_Fit__c</fullName>
    <description>Details of why Bynder Pitch didn&apos;t succeed.</description>
    <label>Bynder Pitch - Reason for Lack of Fit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DAM Features</fullName>
            </value>
            <value>
                <fullName>Folders</fullName>
            </value>
            <value>
                <fullName>Guidelines Features</fullName>
            </value>
            <value>
                <fullName>Integrations</fullName>
            </value>
            <value>
                <fullName>Metadata Templates*</fullName>
            </value>
            <value>
                <fullName>Multi-brand</fullName>
            </value>
            <value>
                <fullName>Multi-theme</fullName>
            </value>
            <value>
                <fullName>Workflow Features</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Bankruptcy</fullName>
                <isActive>false</isActive>
                <label>Bankruptcy</label>
            </value>
            <value>
                <fullName>Committed to Competitor</fullName>
                <isActive>false</isActive>
                <label>Committed to Competitor</label>
            </value>
            <value>
                <fullName>Homegrown Tool</fullName>
                <isActive>false</isActive>
                <label>Homegrown Tool</label>
            </value>
            <value>
                <fullName>Lack of Features</fullName>
                <isActive>false</isActive>
                <label>Lack of Features</label>
            </value>
            <value>
                <fullName>Merger</fullName>
                <isActive>false</isActive>
                <label>Merger</label>
            </value>
            <value>
                <fullName>Webdam/Bynder Feature Parity</fullName>
                <isActive>false</isActive>
                <label>Webdam/Bynder Feature Parity</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>