metadata/force-app/main/default/objects/Opportunity/fields/Bynder_Pitch_Stage_Reason__c.field-meta.xml
<CustomField>
    <fullName>Bynder_Pitch_Stage_Reason__c</fullName>
    <description>Select an outcome of why Bynder was or wasn’t pitched</description>
    <inlineHelpText>Select an outcome of why Bynder was or wasn’t pitched</inlineHelpText>
    <label>Bynder Pitch - Stage/Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Bynder_pitch__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Migrating to Bynder</fullName>
            </value>
            <value>
                <fullName>Determined not a fit</fullName>
            </value>
            <value>
                <fullName>Not interested</fullName>
            </value>
            <value>
                <fullName>Pitched too late</fullName>
            </value>
            <value>
                <fullName>No budget</fullName>
            </value>
            <value>
                <fullName>Demo Scheduled/ Complete</fullName>
            </value>
            <value>
                <fullName>Competitor/Homegrown Tool</fullName>
            </value>
            <value>
                <fullName>Email mention</fullName>
            </value>
            <value>
                <fullName>Lack of Features</fullName>
            </value>
            <value>
                <fullName>Pricing Presented</fullName>
            </value>
            <value>
                <fullName>Refused Demo</fullName>
            </value>
            <value>
                <fullName>Solutions Demo</fullName>
            </value>
            <value>
                <fullName>Organizational Changes</fullName>
            </value>
            <value>
                <fullName>Still Assessing</fullName>
            </value>
            <value>
                <fullName>Unresponsive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>