metadata/force-app/main/default/objects/Opportunity/fields/Changed__c.field-meta.xml
<CustomField>
    <fullName>Changed__c</fullName>
    <label>Changed Close Date Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>