metadata/force-app/main/default/objects/Opportunity/fields/Check_Account_Deployment__c.field-meta.xml
<CustomField>
    <fullName>Check_Account_Deployment__c</fullName>
    <description>Used to check if &apos;Deployment Region&apos; and &apos;Deployment Department&apos; fields on account are filled or not.</description>
    <formula>IF( 
   AND(OR(CONTAINS(TEXT(Type),&apos;New Business&apos;),
          TEXT(Type) = &apos;Existing Business-Upsell&apos;,
          TEXT(Type) =&apos;Existing Business-Renewal&apos;
          ),
         OR(ISBLANK(Account.Deployment_Region__c),
            ISBLANK(Account.Deployment_Department__c)
            )
       ),

IMAGE(&quot;/servlet/servlet.FileDownload?file=0150P000005PRcW&quot;, &quot;NO&quot;),
IMAGE(&quot;/servlet/servlet.FileDownload?file=0150P000005PRdt&quot;,&quot;YES&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>&apos;Deployment Region&apos; and &apos;Deployment Department&apos; fields on account should be filled.</inlineHelpText>
    <label>Check - Account Deployment</label>
    <type>Text</type>
</CustomField>