metadata/force-app/main/default/objects/Opportunity/fields/Check_Contract_Dates__c.field-meta.xml
<CustomField>
    <fullName>Check_Contract_Dates__c</fullName>
    <description>Contract dates are required to set an opportunity to stage &apos;Closed Won&apos;.</description>
    <formula>IF(
ISPICKVAL(Type,&quot;Existing Business-Professional Services&quot;),IMAGE(&quot;/servlet/servlet.FileDownload?file=0150P000005PRdt&quot;,&quot;YES&quot;),

IF(
OR(
ISBLANK(End_date_contract__c),
ISBLANK(Startdate_contract__c),
AND(
OR(ISPICKVAL(Type, &quot;New Business-Enterprise Cloud&quot;), 
ISPICKVAL(Type,&apos;New Business - Expansion Portal&apos;)),
 DAY(Startdate_contract__c) = DAY(End_date_contract__c))),
IMAGE(&quot;/servlet/servlet.FileDownload?file=0150P000005PRcW&quot;, &quot;NO&quot;), 
IMAGE(&quot;/servlet/servlet.FileDownload?file=0150P000005PRdt&quot;,&quot;YES&quot;)))</formula>
    <inlineHelpText>Green: Okay
Red: Enter correct contract dates</inlineHelpText>
    <label>Check - Contract Dates</label>
    <type>Text</type>
</CustomField>