metadata/force-app/main/default/objects/Opportunity/fields/Check_Customisation_Required__c.field-meta.xml
<CustomField>
    <fullName>Check_Customisation_Required__c</fullName>
    <description>Indicates whether customisation fields are filled or not.</description>
    <formula>IF( 
  AND(
    Customisation_Required__c=TRUE, 
    OR(
      ISBLANK(Due_Date_of_Customisations__c), 
      Product_Customisation_Required_Filled__c = FALSE,
      ISBLANK(Product_Sign_Off_Owner__c))),
    IMAGE(&quot;/servlet/servlet.FileDownload?file=0150P000005PRcW&quot;, &quot;NO&quot;), 
    IMAGE(&quot;/servlet/servlet.FileDownload?file=0150P000005PRdt&quot;,&quot;YES&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Green: Okay
Red: Customisation fields are required.</inlineHelpText>
    <label>Check - Customisation Required</label>
    <type>Text</type>
</CustomField>