metadata/force-app/main/default/objects/Opportunity/fields/Check_Database_filled__c.field-meta.xml
<CustomField>
    <fullName>Check_Database_filled__c</fullName>
    <formula>IF( 
  OR(
  NOT(ISBLANK( Account.Database__c )),
  Platform__c = &quot;Webdam&quot;), 
  IMAGE(&quot;/servlet/servlet.FileDownload?file=0150P000005PRdt&quot;,&quot;YES&quot;), 
  IMAGE(&quot;/servlet/servlet.FileDownload?file=0150P000005PRcW&quot;, &quot;NO&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Green: Okay
Red: The Database field is required on the account level</inlineHelpText>
    <label>Check - Database filled</label>
    <type>Text</type>
</CustomField>