metadata/force-app/main/default/objects/Opportunity/fields/Check_Invoice_Period__c.field-meta.xml
<CustomField>
    <fullName>Check_Invoice_Period__c</fullName>
    <description>An Invoice period is required to set an opportunity to stage &apos;Closed Won&apos;.</description>
    <formula>IF( 
ISPICKVAL(Type,&quot;Existing Business-Professional Services&quot;),IMAGE(&quot;/servlet/servlet.FileDownload?file=0150P000005PRdt&quot;,&quot;YES&quot;), 
IF(  
ISBLANK(Invoice_period__c),
IMAGE(&quot;/servlet/servlet.FileDownload?file=0150P000005PRcW&quot;, &quot;NO&quot;), 
IMAGE(&quot;/servlet/servlet.FileDownload?file=0150P000005PRdt&quot;,&quot;YES&quot;)))</formula>
    <inlineHelpText>Green: Okay
Red: Enter invoice period</inlineHelpText>
    <label>Check - Invoice Period</label>
    <type>Text</type>
</CustomField>