metadata/force-app/main/default/objects/Opportunity/fields/Check_Main_Objective__c.field-meta.xml
<CustomField>
    <fullName>Check_Main_Objective__c</fullName>
    <description>Indicates whether at leas one main objective entered or not.</description>
    <formula>IF( 
MainObjectiveEntered__c = FALSE,
IMAGE(&quot;/servlet/servlet.FileDownload?file=0150P000005PRcW&quot;, &quot;NO&quot;), 
IMAGE(&quot;/servlet/servlet.FileDownload?file=0150P000005PRdt&quot;,&quot;YES&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Green: Okay
Red: Please enter at least one main objective.</inlineHelpText>
    <label>Check - Main Objective</label>
    <type>Text</type>
</CustomField>