metadata/force-app/main/default/objects/Opportunity/fields/Check_MRR_matches_MRR_from_products__c.field-meta.xml
<CustomField>
    <fullName>Check_MRR_matches_MRR_from_products__c</fullName>
    <description>MRR and MRR from products must match to set opportunity to stage &apos;Closed Won&apos;. Check that the contract start date has been set.</description>
    <formula>IF(
ISPICKVAL(Type,&quot;Existing Business-Professional Services&quot;),IMAGE(&quot;/servlet/servlet.FileDownload?file=0150P000005PRdt&quot;,&quot;YES&quot;),
IF(
ROUND(MRR_from_Products__c,2) = Round(MRR__c,2),
IMAGE(&quot;/servlet/servlet.FileDownload?file=0150P000005PRdt&quot;,&quot;YES&quot;),
IMAGE(&quot;/servlet/servlet.FileDownload?file=0150P000005PRcW&quot;, &quot;NO&quot;))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Green: Okay
Red: MRR does not match MRR from Products</inlineHelpText>
    <label>Check - MRR matches MRR from products</label>
    <type>Text</type>
</CustomField>