metadata/force-app/main/default/objects/Opportunity/fields/Check_Notice_Period__c.field-meta.xml
<CustomField>
    <fullName>Check_Notice_Period__c</fullName>
    <formula>IF( 
ISPICKVAL(Type,&quot;Existing Business-Professional Services&quot;),IMAGE(&quot;/servlet/servlet.FileDownload?file=0150P000005PRdt&quot;,&quot;YES&quot;), 
IF( 
ISBLANK(TEXT(Notice_period_months__c)), 
IMAGE(&quot;/servlet/servlet.FileDownload?file=0150P000005PRcW&quot;, &quot;NO&quot;), 
IMAGE(&quot;/servlet/servlet.FileDownload?file=0150P000005PRdt&quot;,&quot;YES&quot;)))</formula>
    <inlineHelpText>Green: Okay 
Red: Enter notice period in months</inlineHelpText>
    <label>Check - Notice Period</label>
    <type>Text</type>
</CustomField>